--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <h1>
 <a id="slack_startup" class="anchor" href="#slack_startup" aria-hidden="true"><span class="octicon octicon-link"></span></a>slack_startup</h1>
 
-<p>Interactive map of the startup-community on #slack</p>
+<p>Interactive map of the startup community on #slack</p>
 
 <p>Just point your browser to <a href="https://www.mapz.com/static/startup/slack_startup.html">https://www.mapz.com/static/startup/slack_startup.html</a> to see the members of the community or search for particular skills of the members. Not all members are included yet, the project just started. It is driven by the community and growing.</p>
 
 <h2>
-<a id="ad-yourself-to-the-map" class="anchor" href="#ad-yourself-to-the-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ad yourself to the map</h2>
+<a id="add-yourself-to-the-map" class="anchor" href="#add-yourself-to-the-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add yourself to the map</h2>
 
-<p>Feel free to ad your personal data to the json file if you are a member of the group and would like to see which startups are developing around your location. I will update the map hosted at mapz.com frequently.</p>
+<p>Feel free to add your personal data to the json file if you are a member of the group and would like to see which startups are developing around your location. I will update the map hosted at mapz.com frequently.</p>
 
 <h2>
 <a id="help-to-make-the-code-better" class="anchor" href="#help-to-make-the-code-better" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help to make the code better</h2>
