--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2>
 <a id="help-to-make-the-code-better" class="anchor" href="#help-to-make-the-code-better" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help to make the code better</h2>
 
-<p>There is a lot of room for improvement regarding responsiveness and cool features. Just go for it. The map is based on the API of the mapping service <a href="https://www.mapz.com">https://www.mapz.com</a> which is basically a custom build of OpenLayers 3. You can use the code on localhost without an API key. If you need a API Key to install the map on a public server, just send a short request to <a href="mailto:api.key@mapz.com">api.key@mapz.com</a> and tell us the domain.</p>
+<p>There is a lot of room for improvement regarding responsiveness and cool features. Just go for it. The map is based on the API of the mapping service <a href="https://www.mapz.com/api">https://www.mapz.com/api</a> which is basically a custom build of OpenLayers 3. You can use the code on localhost without an API key. If you need a API Key to install the map on a public server, just send a short request to <a href="mailto:api.key@mapz.com">api.key@mapz.com</a> and tell us the domain.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/mapzcom/slack_startup">#slack #startup</a> is maintained by <a href="https://github.com/mapzcom">mapzcom</a>.</span>
