--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <h2>
 <a id="add-yourself-to-the-map" class="anchor" href="#add-yourself-to-the-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add yourself to the map</h2>
 
-<p>Feel free to add your personal data to the json file if you are a member of the group and would like to see which startups are developing around your location. I will update the map hosted at mapz.com frequently.</p>
+<p>Feel free to add your personal data to the json file if you are a member of the group and would like to see which startups are developing around your location. I will update the map hosted at mapz.com frequently. Too complicated? Okay, use this <a href="http://goo.gl/forms/QUJQ2oBRN5">Google Form</a> to submit your entry.
+</p>
 
 <h2>
 <a id="help-to-make-the-code-better" class="anchor" href="#help-to-make-the-code-better" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help to make the code better</h2>
