--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="slack_startup" class="anchor" href="#slack_startup" aria-hidden="true"><span class="octicon octicon-link"></span></a>slack_startup</h1>
 
-<p>Interactive map of the startup community on #slack</p>
+<p><a href="https://www.mapz.com/static/startup/slack_startup.html">Interactive map</a> of the <a href="http://startupfoundation.co/">#startup community</a> on <a href="https://slack.com/">#slack</a></p>
 
 <p>Just point your browser to <a href="https://www.mapz.com/static/startup/slack_startup.html">https://www.mapz.com/static/startup/slack_startup.html</a> to see the members of the community or search for particular skills of the members. Not all members are included yet, the project just started. It is driven by the community and growing.</p>
 
