Added attributions link to GitHub, fixed broken links.

--- a/slack_startup.html
+++ b/slack_startup.html
@@ -512,7 +512,8 @@
           attributions: [new ol.Attribution({
             html: '&nbsp;&nbsp;&copy; 2015 <a target="_blank" href="http://www.mapz.com">mapz.com </a>\
               - Map Data: <a target="_blank" href="http://openstreetmap.org" >OpenStreetMap</a>\
-              (<a href="http://opendatacommons.org/licenses/odbl/1.0/" target="_blank">ODbL</a>)'
+              (<a href="http://opendatacommons.org/licenses/odbl/1.0/" target="_blank">ODbL</a>)\
+              - <a target="_blank" href="http://mapzcom.github.io/slack_startup/"><font color=#EF8214> Add your #startup entry</a>'
           })],
           tilePixelRatio: 2,
           url:'https://tiles.mapz.com/mapproxy/v1/startup-28e8de99/tiles/1.0.0/osm_gray_hq/EPSG3857/{z}/{x}/{-y}.jpeg'
