--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">#slack #startup</h1>
-      <h2 class="project-tagline">Interactive map of the #startup-community on slack</h2>
+      <h1 class="project-name">#slack map #startup</h1>
+      <h2 class="project-tagline">Interactive map of the #startup-community on #slack</h2>
       <a href="https://github.com/mapzcom/slack_startup" class="btn">View on GitHub</a>
       <a href="https://github.com/mapzcom/slack_startup/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/mapzcom/slack_startup/tarball/master" class="btn">Download .tar.gz</a>
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h1>
-<a id="slack_startup" class="anchor" href="#slack_startup" aria-hidden="true"><span class="octicon octicon-link"></span></a>slack_startup</h1>
+<a id="slack_startup" class="anchor" href="#slack_startup" aria-hidden="true"><span class="octicon octicon-link"></span></a>#slack map #startup</h1>
 
 <p><a href="https://www.mapz.com/static/startup/slack_startup.html">Interactive map</a> of the <a href="http://startupfoundation.co/">#startup community</a> on <a href="https://slack.com/">#slack</a></p>
 
@@ -29,7 +29,7 @@
 <h2>
 <a id="add-yourself-to-the-map" class="anchor" href="#add-yourself-to-the-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add yourself to the map</h2>
 
-<p>Feel free to add your personal data to the json file if you are a member of the group and would like to see which startups are developing around your location. I will update the map hosted at mapz.com frequently. Too complicated? Okay, use this <a href="http://goo.gl/forms/QUJQ2oBRN5">Google Form</a> to submit your entry.
+<p>Feel free to add your personal data to the json file if you are a member of the group and would like to see which startups are developing around your location. We will update the map hosted at mapz.com frequently. Too complicated? Okay, use this <a href="http://goo.gl/forms/QUJQ2oBRN5">Google Form</a> to submit your entry.
 </p>
 
 <h2>
